# autonomous-watering

./: README.md
hw/: .gitignore
hw/watering/: conductivity.kicad_sch  controller.kicad_sch  current_meas.kicad_sch  fabrication-toolkit-options.json  fp-lib-table  ldo.kicad_sch  solar.kicad_sch  sti3508.kicad_sym  valves.kicad_sch  watering.kicad_pcb  watering.kicad_prl  watering.kicad_pro  watering.kicad_sch
hw/watering/DORABO.pretty/: DB142R-5.08-2P-GN.kicad_mod
hw/watering/batteryholder.pretty/: BH-18650-B1BA002.kicad_mod
hw/watering/production/: netlist.ipc  watering_bom.csv  watering_designators.csv  watering_positions.csv
sw/: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  sdkconfig
sw/cmake/: version.hpp.in
sw/main/: CMakeLists.txt  adc.hpp  main.cpp  pwm.cpp  pwm.hpp  valves.hpp
